...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    tools:text="当前意图：FillPersonalInfo" />

                <TextView
                    android:id="@+id/textview_review_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    tools:text="姓名：张雨桐" />

                <Button
                    android:id="@+id/button_submit_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/routing_submit" />

                <Button
...
